# unicode-shaper

./: .eslintrc  .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  TODO  UnicodeData.txt  build-wasm.ts  build.ts  bun.lockb  package.json  test.ts  tsconfig.eslint.json  tsconfig.json  tsconfig.lint.json  tsconfig.types.json
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  test.yml
.helix/: languages.toml
coverage/: lcov.info
docs/: index.html  modules.html
docs/assets/: navigation.js  search.js
docs/classes/: UShapeVariables.html  WasmTextShaper.html
docs/functions/: findDominantType.html  getType.html  isCJK.html  isNeutral.html  isRTL.html  isThai.html  isWeak.html  mirrorAdjustString.html  processBidiText.html  shapeArabic.html  shapeString.html  shapeUnicode.html  shape_tamil.html  sharedShaper.html
docs/types/: Type.html
docs/variables/: Type-1.html
lib/: index.ts  u-shaper.wasm.ts
rust/: Cargo.toml  lib.rs
rust-wasm/: Cargo.toml  lib.rs
rust/shape/: arabic.rs  buginese.rs  cjk.rs  internal.rs  javanese.rs  khmer.rs  mod.rs  myanmar.rs  shared.rs  tamil.rs  thai.rs  tibetan.rs
rust/ubidi/: internal.rs  mod.rs
src/: index.ts  lib.rs  shape.rs  shape_arabic.rs  shape_buginese.rs  shape_internal.rs  shape_javanese.rs  shape_khmer.rs  shape_myanmar.rs  shape_tibetan.rs  textShaperWasm.ts  uShaper.wasm.ts  ubidi.rs  ubidi_internal.rs
src/shape/: arabic.ts  buginese.ts  cjk.ts  index.ts  internal.ts  javanese.ts  khmer.ts  myanmar.ts  shared.ts  tamil.ts  thai.ts  tibetan.ts
src/ubidi/: index.ts  internal.ts
test/: shape.test.ts
tests/: wasmShape.test.ts
util/: buildMirrors.js  parseUnicodeData.js  test.cpp
