[package]
name = "unicode-shaper"
version = "0.3.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Shape unicode text so that renderers like WebGL and WebGPU can properly display the glyphs."
documentation = "https://docs.rs/unicode-shaper"
homepage = "https://github.com/OpenS2/unicode-shaper"
repository = "https://github.com/OpenS2/unicode-shaper"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "shape", "unicode", "low-cost-code"]
license = "MIT"

[features]
default = []
wasm = ["lol_alloc"]

[lib]
name = "unicode_shaper"
path = "rust/lib.rs"
# crate-type = ["lib", "cdylib"]

[dependencies]
lol_alloc = { version = "0.4.1", optional = true }

[dev-dependencies]
wasm-opt = { version = "0.116.1" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
