[package]
name = "unicode-shaper-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This is a wasm build of unicode-shaper-rs"
documentation = "https://docs.rs/unicode-shaper"
homepage = "https://github.com/OpenS2/unicode-shaper"
repository = "https://github.com/OpenS2/unicode-shaper"
readme = "../README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "shape", "unicode", "low-cost-code"]
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_alloc = { version = "0.4.1" }
unicode-shaper-rs = { path = "../rust" }

[dev-dependencies]
wasm-opt = { version = "0.116.1" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
target = "wasm32-unknown-unknown"
