[package]
name = "unicode-shaper"
version = "0.2.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Shape unicode text so that renderers like WebGL and WebGPU can properly display the glyphs."
documentation = "https://docs.rs/unicode-shaper"
homepage = "https://github.com/OpenS2/unicode-shaper"
repository = "https://github.com/OpenS2/unicode-shaper"
readme = "../README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "shape", "unicode", "low-cost-code"]
license = "MIT"

[lib]
name = "unicode_shaper"
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = "fat"
strip = true
# codegen-units = 1 + lto
panic = "abort"
